--- a/backend/requirements/development/requirements.in
+++ b/backend/requirements/development/requirements.in
@@ -2,3 +2,11 @@ django==3.2.4
 django-environ==0.4.5
 djangorestframework==3.12.4
 djangorestframework-simplejwt==4.7.2
+ipython==7.26.0
+mixer==7.1.2
+requests-mock==1.9.3
+django-extensions==3.1.3
+django-mock-queries==2.1.6
+pytest-django==4.4.0
+pytest-cov==2.12.1
+pytest-mock==3.6.1
